# waytranslate

./: Cargo.toml  README.md
src/: app.rs  clipboard.rs  main.rs  popup.rs  translator.rs
