[package]
name = "waytranslate"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"

gtk4 = "0.7"
glib = "0.18"
gtk4-layer-shell = "0.2"

tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1.3"
once_cell = "1.21.3"

